--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^4.3.12",
     "aws-amplify-react": "^5.1.9",
     "components": "^0.1.0",
+    "dompurify": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/amplify": "^1.1.25",
+    "@types/dompurify": "^2.3.3",
     "@types/styled-components": "^5.1.20"
   }
 }
